--- a/RedditApp/RedditApp/Base.lproj/Main.storyboard
+++ b/RedditApp/RedditApp/Base.lproj/Main.storyboard
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1PS-dj-2pV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="1wO-tm-Lpu">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="HrI-q1-8Oe">
+            <objects>
+                <navigationController id="1wO-tm-Lpu" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="WOg-wh-5vu">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="1PS-dj-2pV" kind="relationship" relationship="rootViewController" id="bZh-br-bur"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DVX-af-r7R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-394" y="282"/>
+        </scene>
         <!--Index View Controller-->
         <scene sceneID="w0A-sK-QAD">
             <objects>
@@ -17,62 +33,99 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J0q-dk-Axu">
-                                <rect key="frame" x="33" y="20" width="35" height="30"/>
-                                <state key="normal" title="Back">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Mb5-nd-dB5">
-                                <rect key="frame" x="16" y="58" width="568" height="522"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Mb5-nd-dB5">
+                                <rect key="frame" x="15" y="0.0" width="570" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NewsCell" id="JRu-Ea-au3">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="JRu-Ea-au3">
                                         <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="Cell" tableViewCell="JRu-Ea-au3" id="aox-hX-EmW">
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="MCP-7b-gee" kind="show" id="QJB-mO-Uma"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
-                                    <outlet property="dataSource" destination="1PS-dj-2pV" id="aW2-cB-evp"/>
+                                    <outlet property="dataSource" destination="1PS-dj-2pV" id="MjD-wj-dTL"/>
                                     <outlet property="delegate" destination="1PS-dj-2pV" id="VIH-pe-56o"/>
                                 </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="J0q-dk-Axu" firstAttribute="top" secondItem="sya-Ej-b2c" secondAttribute="bottom" id="0a3-Go-0of"/>
-                            <constraint firstItem="J0q-dk-Axu" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" constant="30" id="5Zc-d0-PVY"/>
-                            <constraint firstAttribute="centerX" secondItem="J0q-dk-Axu" secondAttribute="centerX" id="Glz-mq-ixb"/>
-                            <constraint firstItem="J0q-dk-Axu" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" constant="17" id="H2j-yC-tYc"/>
+                            <constraint firstItem="zlU-Ni-jvV" firstAttribute="top" secondItem="Mb5-nd-dB5" secondAttribute="bottom" id="1fv-6x-PkY"/>
                             <constraint firstItem="Mb5-nd-dB5" firstAttribute="top" secondItem="sya-Ej-b2c" secondAttribute="bottom" constant="20" id="JE4-a4-fSu"/>
+                            <constraint firstItem="Mb5-nd-dB5" firstAttribute="top" secondItem="Hj9-LC-IJD" secondAttribute="topMargin" constant="58" id="L1U-5S-DTh"/>
                             <constraint firstItem="Mb5-nd-dB5" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leading" constant="15" id="NOI-Je-S1J"/>
-                            <constraint firstAttribute="centerY" secondItem="J0q-dk-Axu" secondAttribute="centerY" id="NWG-Xp-LZv"/>
-                            <constraint firstItem="J0q-dk-Axu" firstAttribute="top" secondItem="sya-Ej-b2c" secondAttribute="bottom" id="ckk-4z-EcG"/>
-                            <constraint firstItem="Mb5-nd-dB5" firstAttribute="top" secondItem="J0q-dk-Axu" secondAttribute="bottom" constant="8" id="hje-kh-XnV"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Mb5-nd-dB5" secondAttribute="trailing" constant="-1" id="Sy3-yt-VfX"/>
+                            <constraint firstItem="Mb5-nd-dB5" firstAttribute="top" secondItem="Hj9-LC-IJD" secondAttribute="topMargin" constant="58" id="eZR-w5-caA"/>
+                            <constraint firstItem="Mb5-nd-dB5" firstAttribute="leading" secondItem="Hj9-LC-IJD" secondAttribute="leadingMargin" constant="-1" id="hOL-mR-iLL"/>
                             <constraint firstItem="zlU-Ni-jvV" firstAttribute="top" secondItem="Mb5-nd-dB5" secondAttribute="bottom" constant="20" id="lLE-Qn-s13"/>
                             <constraint firstAttribute="centerX" secondItem="Mb5-nd-dB5" secondAttribute="centerX" id="p70-G5-Td5"/>
                             <constraint firstAttribute="trailing" secondItem="Mb5-nd-dB5" secondAttribute="trailing" constant="15" id="pBE-K5-VJu"/>
+                            <constraint firstItem="Mb5-nd-dB5" firstAttribute="top" secondItem="Hj9-LC-IJD" secondAttribute="topMargin" id="pkf-nC-NeS"/>
+                            <constraint firstItem="zlU-Ni-jvV" firstAttribute="top" secondItem="Mb5-nd-dB5" secondAttribute="bottom" constant="20" id="ye2-YN-eOG"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="0a3-Go-0of"/>
-                                <exclude reference="5Zc-d0-PVY"/>
-                                <exclude reference="Glz-mq-ixb"/>
-                                <exclude reference="NWG-Xp-LZv"/>
                                 <exclude reference="JE4-a4-fSu"/>
+                                <exclude reference="L1U-5S-DTh"/>
+                                <exclude reference="NOI-Je-S1J"/>
+                                <exclude reference="eZR-w5-caA"/>
+                                <exclude reference="p70-G5-Td5"/>
+                                <exclude reference="pBE-K5-VJu"/>
+                                <exclude reference="lLE-Qn-s13"/>
+                                <exclude reference="ye2-YN-eOG"/>
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="lwO-p0-Zk2">
+                        <nil key="title"/>
+                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Xcf-5i-Ayr">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Button">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                    </navigationItem>
                     <connections>
                         <outlet property="itemListTable" destination="Mb5-nd-dB5" id="BAr-F1-yHL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L5O-Mi-Ro4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="542" y="379"/>
+            <point key="canvasLocation" x="378" y="282"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="L5a-oZ-EJl">
+            <objects>
+                <viewController id="MCP-7b-gee" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oam-jl-uMV"/>
+                        <viewControllerLayoutGuide type="bottom" id="bgF-eq-m4Z"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="skS-M8-pt4">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HhE-qe-CDb">
+                                <rect key="frame" x="60" y="177" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="h4V-us-0Df"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AEX-nJ-ZqU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1202" y="282"/>
         </scene>
     </scenes>
 </document>
