--- a/RedditApp/RedditApp/Base.lproj/Main.storyboard
+++ b/RedditApp/RedditApp/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -116,32 +117,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="DRk-QR-MJa">
-                                <rect key="frame" x="10" y="-27" width="570" height="600"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0lX-cV-tTe">
+                                <rect key="frame" x="30" y="70" width="390" height="219"/>
                                 <animations/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" id="NPa-2N-1m2">
-                                        <rect key="frame" x="0.0" y="86" width="570" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="Cell" tableViewCell="NPa-2N-1m2" id="p4x-eF-eS9">
-                                            <rect key="frame" x="0.0" y="0.0" width="537" height="43"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <animations/>
-                                        </tableViewCellContentView>
-                                        <animations/>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="1PS-dj-2pV" id="Qyu-G0-bWm"/>
-                                    <outlet property="delegate" destination="1PS-dj-2pV" id="7l4-5q-lhQ"/>
-                                </connections>
-                            </tableView>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="0lX-cV-tTe" secondAttribute="height" multiplier="65:11" id="10U-wZ-Q8k"/>
+                                    <constraint firstAttribute="width" secondItem="0lX-cV-tTe" secondAttribute="height" multiplier="16:9" id="Efx-dj-kWk"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="160" id="q1v-Tu-Hgt"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="10U-wZ-Q8k"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="0lX-cV-tTe" firstAttribute="top" secondItem="skS-M8-pt4" secondAttribute="topMargin" constant="70" id="5JW-85-9ab"/>
+                            <constraint firstItem="0lX-cV-tTe" firstAttribute="top" secondItem="skS-M8-pt4" secondAttribute="topMargin" constant="30" id="HnO-ji-nqm"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="0lX-cV-tTe" secondAttribute="trailing" constant="160" id="KzO-nZ-8Qf"/>
+                            <constraint firstItem="0lX-cV-tTe" firstAttribute="leading" secondItem="skS-M8-pt4" secondAttribute="leadingMargin" constant="10" id="WJr-Gz-aJ8"/>
+                            <constraint firstItem="0lX-cV-tTe" firstAttribute="top" secondItem="skS-M8-pt4" secondAttribute="topMargin" constant="60" id="cO7-jb-1ym"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="HnO-ji-nqm"/>
+                                <exclude reference="cO7-jb-1ym"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="h4V-us-0Df"/>
+                    <navigationItem key="navigationItem" id="h4V-us-0Df">
+                        <nil key="title"/>
+                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="2ho-sn-Zhg">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <animations/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="mainLabel" destination="2ho-sn-Zhg" id="KeA-8Y-03u"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AEX-nJ-ZqU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
